styles/inputs.css
:root {
    --input-width: 275px;
    --input-height: 75px;
    --input-padding: 16px;
    --input-gap: 16px;
    --border-radius: 4px;
    --primary-color: #000080;
    --primary-text-color: #FFFFFF;
    --secondary-color: #FFB30F;
    --secondary-text-color: #000000;
    --background-color: #F0F0F0;
    --background-text-color: #000000;
    --foreground-color: #FFFFFF;
    --foreground-text-color: #000000;
    --active-color: #1E90FF;
    --active-text-color: #FFFFFF;
    --hover-color: #ADD8E6;
    --hover-text-color: #ADD8E6;
    --border-color: #000000;
    --inactive-color: #C0C0C0;
    --inactive-text-color: #FFFFFF;
    --red-alliance-color: #FF0000;
    --blue-alliance-color: #0000FF;
    --alt-table-color: #F2F2F2;
}

html {
    background-color: var(--background-color);
    color: var(--background-text-color);
    touch-action: manipulation;
}

body {
    margin: 0;
    text-align: center;
}

.page {
    display: inline-block;
    padding: 0 auto;
    padding-left: var(--input-gap);
    margin-top: calc(2*var(--input-gap));
    text-align: left;
}

.no_top_margin {
    margin-top: 0;
}

.column {
    padding-right: var(--input-gap);
    float: left;
}

.wr_checkbox, .wr_counter, .wr_button, .wr_dropdown, .wr_string, .wr_number, .wr_text, .wr_select, .wr_card, .column_header, .page_header {
    font-size: 16px;
    font-family: "DejaVu Serif";
    border-style: solid;
    border-width: 0px;
    border-radius: var(--border-radius);
    border-color: var(--border-color);
    margin: 0 auto var(--input-gap);
    padding: var(--input-padding);
    background-color: var(--foreground-color);
    color: var(--foreground-text-color);
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
}

.wr_card {
    display: inline-block;
}

.wr_checkbox, .wr_counter, .wr_button, .wr_select_option, .page_header, .column_header, .input_label, .match_option, .pit_option {
    user-select: none;
    -webkit-touch-callout: none; /* iOS Safari */
    -webkit-user-select: none;
}

#header {
    font-size: 16px;
    font-family: "DejaVu Serif";
    border-style: solid;
    width: 100%;
    text-align: center;
    background-color: var(--primary-color);
    border-color: var(--secondary-color);
    border-width: 0 0 4px 0;
    padding: var(--input-padding) 0;
    color: var(--primary-text-color);
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
}

@keyframes rainbow { 
    0%{background-position:0% 82%}
    50%{background-position:100% 19%}
    100%{background-position:0% 82%}
}

#header a {
    color: var(--primary-text-color);
    text-decoration: none;
}

.page_header {
    margin-right: var(--input-gap);
    font-size: 24px;
    background-color: var(--primary-color);
    color: var(--secondary-color);
}

.column_header {
    font-size: 18px;
    background-color: var(--secondary-color);
    color: var(--primary-color);
}

.wr_checkbox, .wr_counter, .wr_button, .wr_string, .wr_number {
    width: calc(var(--input-width) - 2*var(--input-padding));
    height: calc(var(--input-height) - 2*var(--input-padding));
}

.wr_dropdown {
    width: var(--input-width);
    height: var(--input-height);
}

.wr_text {
    width: calc(var(--input-width) - 2*var(--input-padding));
    height: calc(2*var(--input-height) + var(--input-gap) - 2*var(--input-padding));
}

.wr_select {
    min-width: var(--input-width);
    height: var(--input-height);
    display: table;
    table-layout: fixed;
    padding: 0px;
}

.wr_button {
    clear: both;
}

.wr_dropdown:hover, .wr_select_option:hover, .wr_counter:hover, .wr_checkbox:hover, .wr_button:hover, .wr_string:hover, .wr_number:hover, .wr_text:hover {
    background-color: var(--hover-color);
    color: var(--hover-text-color);
}

.wr_button > *, .wr_checkbox > *, .wr_counter > *, .wr_dropdown > *, .wr_string > *, .wr_number > *, .wr_text > * {
    line-height: calc(var(--input-height) - 2*var(--input-padding));
}

.wr_counter_count {
    font-size: 200%;
}

.wr_select_option {
    height: calc(var(--input-height) - 2*var(--input-padding));
    line-height: calc(var(--input-height) - 2*var(--input-padding));
    padding: var(--input-padding);
    display: table-cell;
    text-align: center;
    border-radius: var(--border-radius);
}

.selected {
    background-color: var(--active-color);
    color: var(--active-text-color);
}

.input_label {
    margin: 8px;
    max-width: calc(var(--input-width) - var(--input-padding));
}

